Pass flexiManage configurations to the client
